--- a/FilaPedido/Impressao.xaml
+++ b/FilaPedido/Impressao.xaml
@@ -30,5 +30,6 @@
         </Border>
         <Button x:Name="btnFechar" Content="Fechar" HorizontalAlignment="Left" Margin="675,318,0,0" VerticalAlignment="Top" Width="108" Height="41" Background="#FF1207F1" BorderBrush="{x:Null}" Foreground="White" Click="BtnFechar_Click"/>
         <Button x:Name="btnFechar_Copy" Content="Fechar" HorizontalAlignment="Left" Margin="562,318,0,0" VerticalAlignment="Top" Width="108" Height="41" Background="#FF1207F1" BorderBrush="{x:Null}" Foreground="White" Click="BtnFechar_Copy_Click"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="460,328,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
     </Grid>
 </Window>
