--- a/FilaPedido/App.xaml
+++ b/FilaPedido/App.xaml
@@ -2,8 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:FilaPedido"
-             StartupUri="Impressao.xaml">
+             StartupUri="Window1.xaml">
     <Application.Resources>
-         
+        <Style TargetType="{x:Type ComboBox}">
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+        </Style>
     </Application.Resources>
 </Application>
