--- a/FilaPedido/Window1.xaml
+++ b/FilaPedido/Window1.xaml
@@ -1,11 +1,12 @@
-﻿<Window x:Class="FilaPedido.Window1"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FilaPedido"
+        xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2" x:Class="FilaPedido.Window1"
         mc:Ignorable="d"
-        Title="Gerenciador de Fila" Height="424.285" Width="905.714" ResizeMode="CanMinimize" Background="#FF060606">
+        Title="Gerenciador de Fila" Height="424.285" Width="905.714" ResizeMode="CanMinimize" Background="#FF060606" MouseLeftButtonDown="Window_MouseLeftButtonDown">
 
     <Grid Background="Black">
         <Grid.ColumnDefinitions>
@@ -16,7 +17,13 @@
             <ColumnDefinition Width="144*"/>
         </Grid.ColumnDefinitions>
         <Border BorderBrush="White" BorderThickness="1" Grid.Column="1" HorizontalAlignment="Left" Height="49" Margin="10,10,0,0" VerticalAlignment="Top" Width="870" Grid.ColumnSpan="4">
-            <ComboBox x:Name="cboItem" SelectedValuePath="Id" DisplayMemberPath="Nome">
+            <ComboBox x:Name="cboItem" Background="Black" Foreground="#FF7030A0" SelectedValuePath="Id" DisplayMemberPath="Nome" FontSize="30" FontWeight="Bold"  HorizontalContentAlignment="Center" >
+                <ComboBox.ItemContainerStyle>
+                    <Style TargetType="{x:Type ComboBoxItem}">
+                        <Setter Property="Background" Value="Black"/>
+                        <Setter Property="BorderBrush" Value="Black"/>
+                    </Style>
+                </ComboBox.ItemContainerStyle>
             </ComboBox>
         </Border>
         <Border BorderBrush="White" BorderThickness="1" Grid.Column="1" HorizontalAlignment="Left" Height="100" Margin="10,64,0,0" VerticalAlignment="Top" Width="190">
@@ -32,27 +39,27 @@
             <DataGrid x:Name="dgItem" AutoGenerateColumns="False" Background="Black" HeadersVisibility="None" RowBackground="Black" LoadingRow="DgItem_LoadingRow" GridLinesVisibility="None" BorderBrush="#FFF9FBFD" MouseDoubleClick="DgItem_MouseDoubleClick">
                 <DataGrid.Columns>
                     <DataGridTextColumn x:Name="Pedido"
-                            Binding="{Binding Path=Pedido}"
+                            Binding="{Binding Pedido}"
                             Header="Pedido" 
                             FontFamily="Calibri"            
                             Width="100"  />
                     <DataGridTextColumn x:Name="Descricao"
-                            Binding="{Binding Path=Descricao}"
+                            Binding="{Binding Descricao}"
                             Header="Descricao"
                             FontFamily="Calibri"
                             Width="200" />
                     <DataGridTextColumn x:Name="Quantidade"
-                            Binding="{Binding Path=Quantidade}"
+                            Binding="{Binding Quantidade}"
                             Header="Quantidade"
                             FontFamily="Calibri"
                             Width="200" />
                     <DataGridTextColumn x:Name="Tipo"
-                            Binding="{Binding Path=Tipo}"
+                            Binding="{Binding Tipo}"
                             Header="Tipo"
                             FontFamily="Calibri"            
                             Width="150">
                         <DataGridTextColumn.ElementStyle>
-                            <Style TargetType="TextBlock">
+                            <Style TargetType="{x:Type TextBlock}">
                                 <Setter Property="HorizontalAlignment" Value="Right" />
                             </Style>
                         </DataGridTextColumn.ElementStyle>
@@ -62,5 +69,4 @@
         </Border>
     </Grid>
 </Window>
-
     
