--- a/FilaPedido/Window1.xaml
+++ b/FilaPedido/Window1.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:FilaPedido"
         xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2" x:Class="FilaPedido.Window1"
         mc:Ignorable="d"
-        Title="Gerenciador de Fila" Height="445.714" Width="888.571" ResizeMode="NoResize" Background="#FF060606" MouseLeftButtonDown="Window_MouseLeftButtonDown" WindowStyle="None">
+        Title="Gerenciador de Fila" Height="417.143" Width="888.571" ResizeMode="NoResize" Background="#FF060606" MouseLeftButtonDown="Window_MouseLeftButtonDown" WindowStyle="None">
 
     <Grid Background="Black">
         <Border BorderBrush="White" BorderThickness="1" Grid.Column="1" HorizontalAlignment="Left" Height="49" Margin="10,10,0,0" VerticalAlignment="Top" Width="870" Grid.ColumnSpan="4">
@@ -29,7 +29,7 @@
             <Label x:Name="lblSaida" Content="Label" Grid.Column="1"/>
         </Border>
         <Border x:Name="gridItem" BorderBrush="White" BorderThickness="1" Grid.Column="1" HorizontalAlignment="Left" Height="313" Margin="205,64,0,0" VerticalAlignment="Top" Width="675" Grid.ColumnSpan="4">
-            <DataGrid x:Name="dgItem" AutoGenerateColumns="False" Background="Black" HeadersVisibility="None" RowBackground="Black" LoadingRow="DgItem_LoadingRow" GridLinesVisibility="None" BorderBrush="#FFF9FBFD" MouseDoubleClick="DgItem_MouseDoubleClick">
+            <DataGrid x:Name="dgItem" IsReadOnly="True" AutoGenerateColumns="False" Background="Black" HeadersVisibility="None" RowBackground="Black" LoadingRow="DgItem_LoadingRow" GridLinesVisibility="None" BorderBrush="#FFF9FBFD" MouseDoubleClick="DgItem_MouseDoubleClick">
                 <DataGrid.Columns>
                     <DataGridTextColumn x:Name="Pedido"
                             Binding="{Binding Pedido}"
@@ -60,6 +60,7 @@
                 </DataGrid.Columns>
             </DataGrid>
         </Border>
+        <Button x:Name="btnFechar" Content="Fechar" HorizontalAlignment="Left" Margin="778,382,0,0" VerticalAlignment="Top" Width="101" Height="27" Background="#FF0224FF" Foreground="White" Click="BtnFechar_Click"/>
     </Grid>
 </Window>
     
